# test-ie-titanic

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.sh  str_utils.py
src/titanic_utils/: __init__.py  cli.py  str_utils.py
tests/: test_str_utils.py
